tests/fail/parser-escape5.dit
import Test from 'a/link/to/somewhere;